Add messageTicket to ticket @@

--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -58,6 +58,123 @@
                 Customer info
             </div>
 
+            <!--All ticket modal-->
+            <div class="modal fade" id="ticket-modal" role="dialog">
+                <div class="modal-dialog modal-lg">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Tickets in the system</h4>
+                        </div>
+                        <div class="modal-body" id="ticket-list">
+                            <div class="ticket-row" >
+                                <div class="ticket">
+                                    <div class="title process">Thái độ nhân viên
+                                        tệ
+                                    </div>
+                                    <div>Status:
+                                        <span class="fa fa-circle" style="color: #00d600"></span>
+                                        In Process
+                                    </div>
+                                    <div>Created by:<span
+                                            style="color: black; font-weight: bold">User</span></div>
+                                    <div>Current assignee:<span style="color: black; font-weight: bold">Admin</span>
+                                    </div>
+                                    <div></div>
+                                </div>
+                                <div class="ticket">
+                                    <div class="title process">Thái độ nhân viên
+                                        tệ
+                                    </div>
+                                    <div>Status:
+                                        <span class="fa fa-circle" style="color: #00d600"></span>
+                                        In Process
+                                    </div>
+                                    <div>Created by:<span
+                                            style="color: black; font-weight: bold">User</span></div>
+                                    <div>Current assignee:<span style="color: black; font-weight: bold">Admin</span>
+                                    </div>
+                                    <div></div>
+                                </div>
+                                <div class="ticket">
+                                    <div class="title solved">
+                                        Galaxy Note 7 phát nổ cần được tư vấn đổi trả
+                                    </div>
+                                    <div style="color: gray">Status: <span class="fa fa-circle" style="color: gray"></span>
+                                        Solved
+                                    </div>
+                                    <div style="color: gray">Created by:<span
+                                            style="color: black; font-weight: bold">User</span></div>
+                                    <div style="color: gray">Current assignee:<span style="color: black; font-weight: bold">Admin</span>
+                                    </div>
+                                    <div></div>
+                                </div>
+                                <div class="ticket">
+                                    <div class="title assigned">
+                                        Hỗ trợ kỹ thuật
+                                    </div>
+                                    <div style="color: gray">Status: <span class="fa fa-circle"
+                                                                           style="color: #cece00"></span> Assigned
+                                    </div>
+                                    <div style="color: gray">Created by:<span
+                                            style="color: black; font-weight: bold">User</span></div>
+                                    <div style="color: gray">Current assignee:<span style="color: black; font-weight: bold">QuyDV</span>
+                                    </div>
+                                    <div></div>
+                                </div>
+                            </div>
+                            <div class="ticket-row">
+                                <div class="ticket">
+                                    <div class="title process">Thái độ nhân viên
+                                        tệ
+                                    </div>
+                                    <div style="color: gray">Status: <span class="fa fa-circle"
+                                                                           style="color: #00d600"></span> In Process
+                                    </div>
+                                    <div style="color: gray">Created by:<span
+                                            style="color: black; font-weight: bold">User</span></div>
+                                    <div style="color: gray">Current assignee:<span style="color: black; font-weight: bold">Admin</span>
+                                    </div>
+                                    <div></div>
+                                </div>
+                                <div class="ticket">
+                                    <div class="title solved">
+                                        Galaxy Note 7 phát nổ cần được tư vấn đổi trả
+                                    </div>
+                                    <div style="color: gray">Status: <span class="fa fa-circle" style="color: gray"></span>
+                                        Solved
+                                    </div>
+                                    <div style="color: gray">Created by:<span
+                                            style="color: black; font-weight: bold">User</span></div>
+                                    <div style="color: gray">Current assignee:<span style="color: black; font-weight: bold">Admin</span>
+                                    </div>
+                                    <div></div>
+                                </div>
+                                <div class="ticket">
+                                    <div class="title assigned">
+                                        Hỗ trợ kỹ thuật
+                                    </div>
+                                    <div style="color: gray">Status: <span class="fa fa-circle"
+                                                                           style="color: #cece00"></span> Assigned
+                                    </div>
+                                    <div style="color: gray">Created by:<span
+                                            style="color: black; font-weight: bold">User</span></div>
+                                    <div style="color: gray">Current assignee:<span style="color: black; font-weight: bold">QuyDV</span>
+                                    </div>
+                                    <div></div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="modal-footer">
+                            <button class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <!--MODALS END HERE-->
         </section>
     </div>
 
