--- a/scc-mvc/src/main/resources/templates/manageticket.html
+++ b/scc-mvc/src/main/resources/templates/manageticket.html
@@ -464,13 +464,20 @@
                 url:"/getcurrentuser",
                 type:"GET",
                 success:function (data) {
+                    var btn;
                     if(data.roleid==4){
+                        btn= '<button class="btn btn-success btn-md " type="button" onclick="createstaffticket()">'
+                                +'<i class="fa fa-plus" aria-hidden="true"></i> <strong>New Ticket</strong>'
+                                +'</button>'
                         $("#status").html(
                                 '<option value="2" >Inprocess</option>'
                                 +'<option value="3" >Reviewing</option>'
                         )
                         window.staff=true;
                     }else{
+                        btn= '<button class="btn btn-success btn-md " type="button" onclick="newticket()">'
+                                +'<i class="fa fa-plus" aria-hidden="true"></i> <strong>New Ticket</strong>'
+                                +'</button>'
                         $("#status").html(
                                 '<option value="2" >Inprocess</option>'
                                 +'<option value="3" >Reviewing</option>'
@@ -482,6 +489,7 @@
                             '<button class="btn btn-primary btn-md " type="button" onclick="ticketrequest('+data.userid+')">'
                             +'<i class="fa fa-flag" aria-hidden="true"></i> <strong>Ticket Request</strong>'
                             +'</button>'
+                            +btn
                     )
 
                 }
@@ -581,6 +589,44 @@
                 })
             })
         }
+
+        function createstaffticket(){
+            $("#createticketstaffModal").modal('toggle');
+            $.ajax({
+                url: "/getallpriorityofbrand",
+                type: "GET",
+                success: function (data) {
+                    $("#newticketpriority").html("");
+                    for (var i = 0; i < data.length; i++) {
+                        $("#newticketstaffpriority").append(
+                                '<option value="'+ data[i].id +'">'+ data[i].name+'</option>'
+                        )
+                    }
+                },
+                error: function () {
+                    alert("fail to load priority for update")
+                }
+            })
+
+            $("#btnCreatestaffTicket").unbind().click(function () {
+                var ticketname=$("#newticketstaffname").val();
+                var ticketpriority=$("#newticketstaffpriority").val();
+                var ticketnote = $("#newticketstaffnote").val();
+                $.ajax({
+                    url:"/createticketforstaff",
+                    type:"POST",
+                    data:{"ticketname":ticketname,"ticketpriority":ticketpriority,"ticketnote":ticketnote},
+                    success:function () {
+                        alert("Create ticket for staff successfull")
+                        $("#createticketstaffModal").modal('toggle');
+                        table.ajax.reload();
+                    },
+                    error:function () {
+                        alert("fail to create ticket for staff")
+                    }
+                })
+            })
+        }
     </script>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
@@ -601,9 +647,7 @@
                   <button class="btn btn-info btn-md " type="button" onclick="configpriority()">
                    <i class="fa fa-cogs" aria-hidden="true"></i> <strong>Config Priority</strong>
                   </button>
-                    <button class="btn btn-success btn-md " type="button" onclick="newticket()">
-                   <i class="fa fa-plus" aria-hidden="true"></i> <strong>New Ticket</strong>
-                  </button>
+
 
        </span>
         </section>
@@ -790,6 +834,37 @@
                         </div>
                         <div class="modal-footer">
                             <button class="btn btn-primary " id="btnCreateTicket">Create Ticket</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="modal fade" id="createticketstaffModal" role="dialog">
+                <div class="modal-dialog">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Create Ticket For you</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form group">
+                                <label for="newticketstaffname">Name</label>
+                                <input type="text" class="form-control" id="newticketstaffname"/>
+                            </div>
+                            <div class="form group">
+                                <label for="newticketstaffpriority"> Priority</label>
+                                <select id="newticketstaffpriority" class="form-control" >
+                                </select>
+                            </div>
+                            <div class="form group">
+                                <label for="newticketstaffnote">Note</label>
+                                <textarea class="form-control" id="newticketstaffnote"></textarea>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button class="btn btn-primary " id="btnCreatestaffTicket">Create Ticket</button>
                         </div>
                     </div>
 
