--- a/scc-mvc/src/main/resources/templates/followticket.html
+++ b/scc-mvc/src/main/resources/templates/followticket.html
@@ -264,11 +264,13 @@
             type:"POST",
             data:{"ticketid":ticketid,"duration":duration},
             success:function (data) {
+
                     alert("This ticket is expired ")
-                $('#ticketitem').html("");
                     getticketduetime(ticketid);
                     getticket(ticketid);
                     loadticketitem(ticketid);
+
+
             },
             error:function () {
                 $("#dueday").html("Expired");
@@ -331,6 +333,7 @@
             type:"POST",
             data:{"ticketid":ticketid},
             success:function (data) {
+                $('#ticketitem').html("");
                 for(var index =0;index<data.length;index++){
                     var timelineitem;
                     if(data[index].comment!==null){
@@ -373,7 +376,7 @@
                              note = " with note: " +data[index].history.note;
                         }
                         if(data[index].history.priority!==null){
-                            status='<a>'+data[index].history.userid+'</a>'+' change this ticket priority to: ' +data[index].history.priority;
+                            status='<a>'+data[index].history.userid+'</a>'+' change this ticket priority to ' +data[index].history.priority;
                         }
                         timelineitem=
                                 '<li class="time-label tickethistory" style="display: none">'
@@ -502,7 +505,6 @@
                 success:function (data) {
                     alert("assign ticket successful"+data.assignee);
                     $('#assignModal').modal('toggle');
-                    $('#ticketitem').html("");
                     getticket(ticketid)
                     loadticketitem(ticketid)
                 },
@@ -527,7 +529,6 @@
                 success:function (data) {
                     $('#statusModal').modal('toggle');
                     alert("change status successfull!");
-                    $('#ticketitem').html("");
                     getticket(ticketid)
                     loadticketitem(ticketid)
                 },
@@ -577,11 +578,11 @@
                 type: "POST",
                 data: {"ticketid": ticketid,"ticketnote":ticketnote,"ticketpriority":ticketpriority},
                 success: function (data) {
-                    console.log(data.ticketid);
                     alert("update ticket successful!");
                     $('#changeticketModal').modal('toggle');
                     getticket(ticketid)
                     loadticketitem(ticketid)
+                    getticketduetime(ticketid)
                 },
                 error: function () {
                     alert("Fail ne");
@@ -658,9 +659,9 @@
         $.ajax({
             url:"/changeticketstatus",
             type:"POST",
-            data:{"ticketid":ticketid,"status":2,"statusnote":"Rework pls"},
+            data:{"ticketid":ticketid,"status":1,"statusnote":"Rework pls"},
             success:function () {
-                alert("approve ticket successfull");
+                alert("Reject ticket successfull");
                 $('#ticketitem').html("");
                 getticket(ticketid)
                 getticketduetime(ticketid)
