messenger đẹp òi

--- a/scc-mvc/src/main/resources/static/css/messenger.css
+++ b/scc-mvc/src/main/resources/static/css/messenger.css
@@ -125,3 +125,10 @@
     width: 30px;
     border-radius: 3px;
 }
+
+.senderAvt  {
+    max-height: 50px;
+    max-width: 50px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
