--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -19,19 +19,42 @@
 <div class="wrapper">
     <div class="content-wrapper" style="max-height: 90vh;overflow: hidden">
 
-        <select class="form-control" name="ddlPages" id="ddlPages" onchange="getAllConversation(this)"
-                onSelect="getAllConversation(this)">
-            <option th:each="page : ${pages}"
-                    th:id="${page.pageid}"
-                    th:value="${page.pageid}"
-                    th:text="${page.name}"></option>
-        </select>
+        <!--Model-->
+        <!--Choose Page modal-->
+        <div class="modal fade" id="filter-page-modal" role="dialog">
+            <div class="modal-dialog modal-sm">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Select page to display conversations</h4>
+                    </div>
+                    <div class="modal-body" id="page-list">
+                        <!--<img height="20px" width="20px" src="https://graph.facebook.com/750322811668893/picture"><b>Kitty-->
+                        <!--Bang Bang</b>-->
+                        <select class="form-control" name="ddlPages" id="ddlPages" onchange="getAllConversation(this)"
+                                onSelect="getAllConversation(this)">
+                            <option th:each="page : ${pages}"
+                                    th:id="${page.pageid}"
+                                    th:value="${page.pageid}"
+                                    th:text="${page.name}"></option>
+                        </select>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <!--End Model-->
+
 
         <section class="content chat">
 
-            <!--Cot ben trai. All conversation of page-->
-            <div class="col-md-3">
-                <div class="row"
+
+            <section class="col-lg-3" style="padding: 0px">
+                <div
                      style="padding-bottom: 5px; text-align:center; background-color: white; padding-top: 5px; border: 1px solid lightgray">
                     <div class="btn-group pull-right" style="margin-right: 20px" data-toggle="modal"
                          data-target="#filter-page-modal">
@@ -46,8 +69,7 @@
                             style="border-radius:0px; margin-left: 20px"><span class="fa fa-search"></span> &nbsp;Search
                     </button>
                     <div class="btn-group" style="margin-left: 5px">
-                        <a class="btn btn-default"
-                           onclick="postListCurPage=1;getAllPosts(listPageFilter,postListCurPage)"
+                        <a class="btn btn-default" onclick="postListCurPage=1;getAllPosts(listPageFilter,postListCurPage)"
                            style="border-radius: 100px">
                             <i class="fa fa-refresh"></i>
 
@@ -57,23 +79,24 @@
                 <div class="collapse" id="search-box" style="padding: 10px">
                     <div class="input-group">
                         <input type="text" class="form-control" value="" id="txtSearchPost"
-                               placeholder="Search by post content"/>
+                               placeholder="Search by message content"/>
                         <span class="input-group-addon" onclick="findPostByContent(listPageFilter)"> <i
                                 class="fa fa-search"></i></span>
                     </div>
                 </div>
                 <div class="postlist" id="post-list">
-                    <div id="messagesList" class="box-body chat">
-                        <div class="item"></div>
+                    <div class="box-body chat" id="messagesList">
+                        <!--This is post list here-->
                     </div>
 
                 </div>
-            </div>
+            </section>
+
 
             <!--Cot o giua. Noi dung chat-->
-            <div class="col-md-6" id="conversation"
-                 style="background-color: inherit; height: 100vh; overflow: scroll">
-                <ul class="chat" id="conversationContent" style="overflow: scroll; height: 80vh;">
+            <div class="col-md-6 cmtbox" id="conversation"
+                 style=" background-color: inherit; ;">
+                <ul class="chat" id="conversationContent" style="overflow: scroll; height: 80vh; margin-left: 10px; margin-right: 10px">
 
                 </ul>
                 <div style="position: fixed; bottom: 10px;" id="conversationReply">
