--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" th:href="@{/css/scc-post.css}"/>
     <script src="/js/moment.min.js"></script>
     <script src="/js/messenger.js"></script>
-    <link rel="stylesheet" href="/css/scc-post.css">
     <link rel="stylesheet" href="/css/messenger.css">
 
 </head>
@@ -47,7 +46,130 @@
 
             </div>
         </div>
-        <!--End Model-->
+
+        <div class="modal fade" id="ticket-modal" role="dialog">
+            <div class="modal-dialog modal-lg">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Tickets in the system</h4>
+                    </div>
+                    <div class="modal-body" id="ticket-list">
+                        <div class="ticket-row">
+                            <div class="ticket">
+                                <div class="title process">Thái độ nhân viên
+                                    tệ
+                                </div>
+                                <div>Status:
+                                    <span class="fa fa-circle" style="color: #00d600"></span>
+                                    In Process
+                                </div>
+                                <div>Created by:<span
+                                        style="color: black; font-weight: bold">User</span></div>
+                                <div>Current assignee:<span style="color: black; font-weight: bold">Admin</span>
+                                </div>
+                                <div></div>
+                            </div>
+                            <div class="ticket">
+                                <div class="title process">Thái độ nhân viên
+                                    tệ
+                                </div>
+                                <div>Status:
+                                    <span class="fa fa-circle" style="color: #00d600"></span>
+                                    In Process
+                                </div>
+                                <div>Created by:<span
+                                        style="color: black; font-weight: bold">User</span></div>
+                                <div>Current assignee:<span style="color: black; font-weight: bold">Admin</span>
+                                </div>
+                                <div></div>
+                            </div>
+                            <div class="ticket">
+                                <div class="title solved">
+                                    Galaxy Note 7 phát nổ cần được tư vấn đổi trả
+                                </div>
+                                <div style="color: gray">Status: <span class="fa fa-circle"
+                                                                       style="color: gray"></span>
+                                    Solved
+                                </div>
+                                <div style="color: gray">Created by:<span
+                                        style="color: black; font-weight: bold">User</span></div>
+                                <div style="color: gray">Current assignee:<span
+                                        style="color: black; font-weight: bold">Admin</span>
+                                </div>
+                                <div></div>
+                            </div>
+                            <div class="ticket">
+                                <div class="title assigned">
+                                    Hỗ trợ kỹ thuật
+                                </div>
+                                <div style="color: gray">Status: <span class="fa fa-circle"
+                                                                       style="color: #cece00"></span> Assigned
+                                </div>
+                                <div style="color: gray">Created by:<span
+                                        style="color: black; font-weight: bold">User</span></div>
+                                <div style="color: gray">Current assignee:<span
+                                        style="color: black; font-weight: bold">QuyDV</span>
+                                </div>
+                                <div></div>
+                            </div>
+                        </div>
+                        <div class="ticket-row">
+                            <div class="ticket">
+                                <div class="title process">Thái độ nhân viên
+                                    tệ
+                                </div>
+                                <div style="color: gray">Status: <span class="fa fa-circle"
+                                                                       style="color: #00d600"></span> In Process
+                                </div>
+                                <div style="color: gray">Created by:<span
+                                        style="color: black; font-weight: bold">User</span></div>
+                                <div style="color: gray">Current assignee:<span
+                                        style="color: black; font-weight: bold">Admin</span>
+                                </div>
+                                <div></div>
+                            </div>
+                            <div class="ticket">
+                                <div class="title solved">
+                                    Galaxy Note 7 phát nổ cần được tư vấn đổi trả
+                                </div>
+                                <div style="color: gray">Status: <span class="fa fa-circle"
+                                                                       style="color: gray"></span>
+                                    Solved
+                                </div>
+                                <div style="color: gray">Created by:<span
+                                        style="color: black; font-weight: bold">User</span></div>
+                                <div style="color: gray">Current assignee:<span
+                                        style="color: black; font-weight: bold">Admin</span>
+                                </div>
+                                <div></div>
+                            </div>
+                            <div class="ticket">
+                                <div class="title assigned">
+                                    Hỗ trợ kỹ thuật
+                                </div>
+                                <div style="color: gray">Status: <span class="fa fa-circle"
+                                                                       style="color: #cece00"></span> Assigned
+                                </div>
+                                <div style="color: gray">Created by:<span
+                                        style="color: black; font-weight: bold">User</span></div>
+                                <div style="color: gray">Current assignee:<span
+                                        style="color: black; font-weight: bold">QuyDV</span>
+                                </div>
+                                <div></div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <!--MODALS END HERE-->
 
 
         <section class="content chat">
@@ -95,7 +217,10 @@
 
             <!--Cot o giua. Noi dung chat-->
             <div class="col-md-6 cmtbox" id="conversation"
-                 style=" background-color: inherit; ;">
+                 style=" background-color: inherit;">
+                <div style="border-bottom: 1px; height: 5%; text-align: center">
+                    <h4 id="currentSenderName">Teen</h4>
+                </div>
                 <ul class="chat" id="conversationContent" style="overflow: scroll; height: 80vh; margin-left: 10px; margin-right: 10px">
 
                 </ul>
@@ -114,131 +239,6 @@
             <div class="col-md-3" id="customer-info" style="background-color: white; max-height: 90vh">
                 Customer info
             </div>
-
-            <!--All ticket modal-->
-            <div class="modal fade" id="ticket-modal" role="dialog">
-                <div class="modal-dialog modal-lg">
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Tickets in the system</h4>
-                        </div>
-                        <div class="modal-body" id="ticket-list">
-                            <div class="ticket-row">
-                                <div class="ticket">
-                                    <div class="title process">Thái độ nhân viên
-                                        tệ
-                                    </div>
-                                    <div>Status:
-                                        <span class="fa fa-circle" style="color: #00d600"></span>
-                                        In Process
-                                    </div>
-                                    <div>Created by:<span
-                                            style="color: black; font-weight: bold">User</span></div>
-                                    <div>Current assignee:<span style="color: black; font-weight: bold">Admin</span>
-                                    </div>
-                                    <div></div>
-                                </div>
-                                <div class="ticket">
-                                    <div class="title process">Thái độ nhân viên
-                                        tệ
-                                    </div>
-                                    <div>Status:
-                                        <span class="fa fa-circle" style="color: #00d600"></span>
-                                        In Process
-                                    </div>
-                                    <div>Created by:<span
-                                            style="color: black; font-weight: bold">User</span></div>
-                                    <div>Current assignee:<span style="color: black; font-weight: bold">Admin</span>
-                                    </div>
-                                    <div></div>
-                                </div>
-                                <div class="ticket">
-                                    <div class="title solved">
-                                        Galaxy Note 7 phát nổ cần được tư vấn đổi trả
-                                    </div>
-                                    <div style="color: gray">Status: <span class="fa fa-circle"
-                                                                           style="color: gray"></span>
-                                        Solved
-                                    </div>
-                                    <div style="color: gray">Created by:<span
-                                            style="color: black; font-weight: bold">User</span></div>
-                                    <div style="color: gray">Current assignee:<span
-                                            style="color: black; font-weight: bold">Admin</span>
-                                    </div>
-                                    <div></div>
-                                </div>
-                                <div class="ticket">
-                                    <div class="title assigned">
-                                        Hỗ trợ kỹ thuật
-                                    </div>
-                                    <div style="color: gray">Status: <span class="fa fa-circle"
-                                                                           style="color: #cece00"></span> Assigned
-                                    </div>
-                                    <div style="color: gray">Created by:<span
-                                            style="color: black; font-weight: bold">User</span></div>
-                                    <div style="color: gray">Current assignee:<span
-                                            style="color: black; font-weight: bold">QuyDV</span>
-                                    </div>
-                                    <div></div>
-                                </div>
-                            </div>
-                            <div class="ticket-row">
-                                <div class="ticket">
-                                    <div class="title process">Thái độ nhân viên
-                                        tệ
-                                    </div>
-                                    <div style="color: gray">Status: <span class="fa fa-circle"
-                                                                           style="color: #00d600"></span> In Process
-                                    </div>
-                                    <div style="color: gray">Created by:<span
-                                            style="color: black; font-weight: bold">User</span></div>
-                                    <div style="color: gray">Current assignee:<span
-                                            style="color: black; font-weight: bold">Admin</span>
-                                    </div>
-                                    <div></div>
-                                </div>
-                                <div class="ticket">
-                                    <div class="title solved">
-                                        Galaxy Note 7 phát nổ cần được tư vấn đổi trả
-                                    </div>
-                                    <div style="color: gray">Status: <span class="fa fa-circle"
-                                                                           style="color: gray"></span>
-                                        Solved
-                                    </div>
-                                    <div style="color: gray">Created by:<span
-                                            style="color: black; font-weight: bold">User</span></div>
-                                    <div style="color: gray">Current assignee:<span
-                                            style="color: black; font-weight: bold">Admin</span>
-                                    </div>
-                                    <div></div>
-                                </div>
-                                <div class="ticket">
-                                    <div class="title assigned">
-                                        Hỗ trợ kỹ thuật
-                                    </div>
-                                    <div style="color: gray">Status: <span class="fa fa-circle"
-                                                                           style="color: #cece00"></span> Assigned
-                                    </div>
-                                    <div style="color: gray">Created by:<span
-                                            style="color: black; font-weight: bold">User</span></div>
-                                    <div style="color: gray">Current assignee:<span
-                                            style="color: black; font-weight: bold">QuyDV</span>
-                                    </div>
-                                    <div></div>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="modal-footer">
-                            <button class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <!--MODALS END HERE-->
         </section>
     </div>
 
