--- a/scc-mvc/src/main/resources/templates/followticket.html
+++ b/scc-mvc/src/main/resources/templates/followticket.html
@@ -421,7 +421,7 @@
                                 +'<span style="margin-left: 10px">'+data[index].message.senderName+'</span>'
                                 +'</h3>'
                                 +'<div class="timeline-body">'
-                                +'<a href="messenger?senderid='+data[index].message.senderid+'&receiverid='+data[index].message.receiverid+'&messageid='+data[index].message.id+'">'+data[index].message.content+'</a>'
+                                +'<a href="messenger/ticket?senderid='+data[index].message.senderid+'&receiverid='+data[index].message.receiverid+'&messageid='+data[index].message.id+'&messageEnd='+data[index].endmessage+'">'+data[index].message.content+'</a>'
                                 +'</div>'
                                 +'</div>'
                                 +'</li>'
