--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -237,8 +237,36 @@
 
             <!--Cot ben phai. Thong tin cua khach hang-->
             <div class="col-md-3" id="customer-info" style="background-color: white; max-height: 90vh">
-                Customer info
+                <div class="col-md-3 box box-primary" class="">
+                    <div class="box-body box-profile">
+                        <img style="height: 200px;width: 200px" id="customer-picture" class="profile-user-img img-responsive img-circle" src="" alt="User profile picture">
+
+                        <h1 id="customer-name" class="customer-username text-center"></h1>
+                        <ul class="list-group list-group-unbordered">
+                            <li class="list-group-item">
+                                <b>Facebook Id</b> <a id="customer-facebook-id" class="pull-right"></a>
+                            </li>
+                            <li class="list-group-item">
+                                <b>Locale</b> <a id="customer-locale" class="pull-right"></a>
+                            </li>
+                            <li class="list-group-item">
+                                <b>Timezone</b> <a id="customer-timezone" class="pull-right"></a>
+                            </li>
+                            <li class="list-group-item">
+                                <b>Gender</b> <a id="customer-gender" class="pull-right"></a>
+                            </li>
+                            <li class="list-group-item">
+                                <b>Note</b> <a id="customer-note" class="pull-right"></a>
+                            </li>
+                        </ul>
+
+                        <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
             </div>
+
+
         </section>
     </div>
 
